@@ -1,6 +1,8 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Fix messages list scrolling in FF3.6 (#1486472)
+- Fix quicksearch input focus (#1486637)
 - Always set changed date when flagging a DB record as deleted + provide a cleanup script
 - Fix address book/group selection (#1486619)
 - Assign newly created contacts to the active group (#1486626)
